fix overflow for extra cards on decks-page

--- a/react-app/src/components/CardsContainer/CardsContainer.css
+++ b/react-app/src/components/CardsContainer/CardsContainer.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .whole-card-div {
@@ -13,7 +14,6 @@
   grid-template-areas:
     "cardquestion cardanswer"
     ;
-  overflow-y: auto;
   margin-bottom: 20px;
 }
 
@@ -23,7 +23,7 @@
   background-color: #a3c6d6;
   display: flex;
   justify-content: center;
-  padding: 30px 0;
+  padding: 30px 20px;
   font-size: 2em;
   border-right: 1px solid black;
 }
@@ -34,7 +34,7 @@
   background-color: #a3c6d6;
   display: flex;
   justify-content: center;
-  padding: 30px 0;
+  padding: 30px 20px;
   font-size: 2em;
   border-left: 1px solid black;
 }
